--- a/ASSETS/CSS/style.css
+++ b/ASSETS/CSS/style.css
@@ -11,8 +11,9 @@ p{
     color: white;
     font-size: 20px;
 }
-div h2{
+div main{
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
